--------------------------------------------------------------------------------
w17 2023-05-12 14:00:05+03:00 - build 6140

1. Continue 6134.
   gh-680: Enable Recursive Plugin Panels for Plugin.Command Calls

--------------------------------------------------------------------------------
w17 2023-05-12 12:06:40+03:00 - build 6139

1. https://bugs.farmanager.com/view.php?id=3447
   Provide alive macro API in ExitFAR event.

--------------------------------------------------------------------------------
drkns 2023-05-11 19:36:13+01:00 - build 6138

1. fmt 10.0.0.

--------------------------------------------------------------------------------
drkns 2023-05-08 19:32:14+01:00 - build 6137

1. Enable consteval in fmt.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-05-06 20:55:00+01:00 - build 6136

1. Extend internal RGB color picker (similar to 256).

2. Refactoring.

--------------------------------------------------------------------------------
MZK 2023-05-05 22:02:12-07:00 - build 6135

1. gh-612: Help Search parameters are preserved between Help sessions.

2. gh-613: Search patterns and parameters are shared between
   Viewer, Editor, and Find File.

--------------------------------------------------------------------------------
w17 2023-05-04 22:01:33+03:00 - build 6134

1. Experimental: Auto plugin panel stack for PF_RECURSIVEPANEL plugins
   https://forum.farmanager.com/viewtopic.php?t=13202

--------------------------------------------------------------------------------
drkns 2023-04-29 00:28:52+01:00 - build 6133

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-04-14 00:24:32+01:00 - build 6132

1. Exception handling improvements.

2. Warnings.

--------------------------------------------------------------------------------
drkns 2023-04-13 00:55:13+01:00 - build 6131

1. Exception handling improvements.
