@@ -1,4 +1,10 @@
 --------------------------------------------------------------------------------
+drkns 2023-05-12 19:31:11+01:00 - build 6141
+
+1. Remove sorting from Task List.
+   Now it's MRU, as before 3451.
+
+--------------------------------------------------------------------------------
 w17 2023-05-12 14:00:05+03:00 - build 6140
 
 1. Continue 6134.
